--- a/src/template/login.html
+++ b/src/template/login.html
@@ -1,3 +1,31 @@
+<!--
+Spiderbot: Web Validation Robot
+Copyright (C) 2015  Julio Martínez Martínez-Checa
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+Contact: julioxus@gmail.com
+
+University of Granada, hereby disclaims all copyright
+interest in the program `Spiderbot' written 
+by Julio Martínez Martínez-Checa.
+
+signature of Julio Martínez Martínez-Checa, 23 June 2015
+Julio Martínez Martínez-Checa, Student at the University of Granada.
+-->
+
 <html>
 	<head>
 	    <meta charset="utf-8">
